--- a/dotfiles/.config/waybar/themes/exotic-modern-simple/orange-player-light/style.css
+++ b/dotfiles/.config/waybar/themes/exotic-modern-simple/orange-player-light/style.css
@@ -3,24 +3,24 @@
  * ----------------------------------------------------- */
 @import '../../../../../.cache/wal/colors-waybar.css';
 
-@define-color waybarcolor #ff5722;
+@define-color waybarcolor #ffffff;
 
 @define-color backgroundcolor @waybarcolor;
 @define-color bordercolor @waybarcolor;
-@define-color textcolor #000000;
+@define-color textcolor #ff5722;
 @define-color iconcolor @textcolor;
 
 
 @define-color spotifybackground @altbackgroundcolor;
-@define-color spotifycolor @waybarcolor;
+@define-color spotifycolor @alttextcolor;
 
 
 @import '../style.css';
  
 #custom-ml4w-welcome {
-    background-image: url("../../assets/ml4w-icon-black.svg");
+    background-image: url("../../assets/ml4w-icon-orange.svg");
 }
 
 #custom-chatgpt {
-    background-image: url("../../assets/openai-white.svg");
+    background-image: url("../../assets/openai-orange.svg");
 }
