--- a/dotfiles/.config/waybar/themes/exotic-modern-simple/orange-player/style.css
+++ b/dotfiles/.config/waybar/themes/exotic-modern-simple/orange-player/style.css
@@ -3,26 +3,24 @@
  * ----------------------------------------------------- */
 @import '../../../../../.cache/wal/colors-waybar.css';
 
-
-@define-color waybarcolor #000000;
+@define-color waybarcolor #ff5722;
 
 @define-color backgroundcolor @waybarcolor;
 @define-color bordercolor @waybarcolor;
-@define-color textcolor #1DB954;
+@define-color textcolor #000000;
 @define-color iconcolor @textcolor;
- 
+
 
 @define-color spotifybackground @altbackgroundcolor;
-@define-color spotifycolor @alttextcolor;
+@define-color spotifycolor @waybarcolor;
 
- 
+
 @import '../style.css';
  
 #custom-ml4w-welcome {
-    background-image: url("../../assets/ml4w-icon-green.svg");
+    background-image: url("../../assets/ml4w-icon-black.svg");
 }
 
 #custom-chatgpt {
-    background-image: url("../../assets/openai-green.svg");
+    background-image: url("../../assets/openai-black.svg");
 }
-
