--- a/dotfiles/.config/waybar/themes/exotic-modern-simple/ubuntu-mate/style.css
+++ b/dotfiles/.config/waybar/themes/exotic-modern-simple/ubuntu-mate/style.css
@@ -18,9 +18,9 @@
 @import '../style.css';
  
 #custom-ml4w-welcome {
-    background-image: url("../../assets/ml4w-icon-black.svg");
+    background-image: url("../../assets/ml4w-icon-mate.svg");
 }
 
 #custom-chatgpt {
-    background-image: url("../../assets/openai-white.svg");
+    background-image: url("../../assets/openai-mate.svg");
 }
