--- a/dotfiles/.config/waybar/themes/exotic-ubuntu/style.css
+++ b/dotfiles/.config/waybar/themes/exotic-ubuntu/style.css
@@ -28,14 +28,19 @@
     font-family: "Fira Sans Semibold", "Font Awesome 6 Free", FontAwesome, Roboto, Helvetica, Arial, sans-serif;
     border: none;
     border-radius: 0px;
+    margin-top: -1px;
+    margin-bottom: -1px;
+    padding-top: 0px;
+    padding-bottom: 0px;
 }
 
 window#waybar {
-    background-color: transparent;
     background-color: @waybarcolor;
     border-bottom: 0px solid #ffffff;
     transition-property: background-color;
     transition-duration: .5s;
+    margin-top: -5px;
+    margin-bottom: -5px;
 }
 
 /* -----------------------------------------------------
@@ -49,7 +54,7 @@ window#waybar {
     border: 0px;
     font-weight: bold;
     font-style: normal;
-    margin: 0px 8px 0px 8px;
+    margin: 6px 10px 6px 10px;
     padding: 0px 0px 0px 0px;
 }
 
@@ -254,11 +259,11 @@ window#waybar.empty #window {
 
 #custom-appmenu {
     background-color: @backgroundcolor;
-    font-size: 22px;
+    font-size: 24px;
     color: @textcolor;
     border-radius: 5px 5px 5px 5px;
     padding: 0px 0px 0px 0px;
-    margin: 0px 3px 0px 15px;
+    margin: 5px 3px 5px 15px;
     opacity: 1.0;
 }
 
@@ -397,8 +402,8 @@ window#waybar.empty #window {
     color: @iconcolor;
     font-size: 16px;
     border-radius: 5px 5px 5px 5px;
-    padding: 2px 10px 0px 10px;
-    margin: 3px 15px 3px 0px;
+    padding: 0px 10px 0px 10px;
+    margin: 0px 15px 0px 0px;
     opacity: 1.0;
 }
 
