--- a/dotfiles/.config/nwg-panel/menu-start.css
+++ b/dotfiles/.config/nwg-panel/menu-start.css
@@ -1,23 +1,1 @@
-window {
-    /* background-color: rgba (36, 47, 79, 0.92); */
-    background-color: #212121;
-    color: #eeeeee
-}
-
-list {
-    background: none;
-    border-radius: 15px
-}
-
-entry {
-    background-color: rgba (0, 0, 0, 0.2)
-}
-
-button {
-    background: none;
-    border: none
-}
-
-button:hover {
-    background-color: #757575
-}
+/home/martin/.config/nwg-panel/themes/default/menu-start.css
